# opsbox

./: .editorconfig  .gitignore  .prettierrc  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMMIT_MESSAGE.md  CPU_TUNING_ANALYSIS.md  Cross.toml  DDD_REFACTORING.md  DOCS_CLEANUP_PLAN.md  E2E_TEST_FIX_SUMMARY.md  LOGSEEK_TEST_COVERAGE_ANALYSIS.md  Makefile  README.md  README_IMPLEMENTATION.md  TASK_7_SUMMARY.md  TEST_COVERAGE_REPORT.md  UNIFIED_SEARCH_CONCURRENCY_SUMMARY.md  WARP.md  debug_ollama.rs  generate_home_logs.py  generate_million_logs.py  generate_multiple_home_logs.py  log_generation_common.py  playwright.config.ts  rust-toolchain.toml  test-coverage-implementation.md  test-coverage-supplement-plan.md  test_graceful_shutdown.sh  test_result
backend/: Cargo.toml  rustfmt.toml  sample_out.txt  test_url.rs  vmmap_out.txt
backend/agent/: Cargo.toml
backend/agent-manager/: Cargo.toml
backend/agent-manager/src/: lib.rs  manager.rs  models.rs  repository.rs  routes.rs
backend/agent-manager/tests/: log_proxy_integration.rs
backend/agent/examples/: three_layer_filtering.md
backend/agent/src/: api.rs  config.rs  daemon.rs  daemon_windows.rs  explorer.rs  lib.rs  main.rs  path.rs  routes.rs  search.rs  server.rs  shutdown.rs
backend/agent/tests/: log_api_integration.rs
backend/api-gateway/: Cargo.toml
backend/api-gateway/src/: config.rs  lib.rs  logging.rs  main.rs  network.rs  server.rs
backend/api-gateway/static/: index.html
backend/api-gateway/static/_app/: version.json
backend/docs/: logseek-dfs-migration-progress.md
backend/explorer/: Cargo.toml
backend/explorer/src/: api.rs  domain.rs  fs.rs  lib.rs  service.rs
backend/explorer/src/fs/: agent_discovery.rs  mod.rs  s3_discovery.rs
backend/explorer/src/service/: lister.rs  mod.rs
backend/explorer/tests/: integration_test.rs
backend/logsearch/: Cargo.toml
backend/logsearch/src/: lib.rs  log_storage.rs  query.rs  renderer.rs  routes.rs  search.rs  storage.rs
backend/logsearch/src/query/: lexer.rs  mod.rs  parser.rs
backend/logseek/: Cargo.toml  SEARCH_EXECUTOR_VERIFICATION.md  SEARCH_FUNCTIONALITY_VERIFICATION.md  VERIFICATION_SUMMARY.md
backend/logseek/examples/: search_executor_demo.rs
backend/logseek/src/: agent.rs  lib.rs  query.rs  repository.rs  routes.rs  service.rs  test_utils.rs
backend/logseek/src/agent/: mod.rs
backend/logseek/src/api/: error.rs  mod.rs  models.rs
backend/logseek/src/domain/: config.rs  file_url.rs  mod.rs  odfi_builder.rs  source_planner.rs
backend/logseek/src/planners/: README.md  bbip.star  local_search_example.star  multi_tar_agent_example.star
backend/logseek/src/query/: conversion.rs  mod.rs  parser.rs
backend/logseek/src/repository/: cache.rs  error.rs  llm.rs  mod.rs  planners.rs  s3.rs  settings.rs
backend/logseek/src/routes/: helpers.rs  llm.rs  mod.rs  nl2q.rs  planners.rs  profiles.rs  s3.rs  search.rs  settings.rs  view.rs
backend/logseek/src/service/: encoding.rs  entry_stream.rs  error.rs  mod.rs  nl2q.rs  resource_orl.rs  search.rs  search_executor.rs  search_runner.rs  searchable.rs
backend/logseek/src/utils/: bbip_service.rs  mod.rs  renderer.rs  storage.rs  strings.rs  tuning.rs
backend/logseek/tests/: archive_detection_alignment.rs  archive_search_integration.rs  boundary_integration.rs  encoding_integration.rs  entry_stream_integration.rs  nl2q_integration.rs  path_filtering_integration.rs  performance_integration.rs  relative_glob_integration.rs  s3_integration.rs  search_executor_integration.rs  search_executor_orl_integration.rs  search_executor_verification.sh  security_integration.rs  starlark_orl_integration.rs  view_integration.rs
backend/opsbox-core/: Cargo.toml  sqlite::memory:
backend/opsbox-core/docs/: dfs-agent-search.md  dfs-archive-concept.md  dfs-complete-design.md  dfs-design-review.md  dfs-logseek-search.md  dfs-model-redesign.md  dfs-module-integration.md  dfs-search-call-chain.md  dfs-search-unified-entry.md
backend/opsbox-core/examples/: debug_ollama.rs
backend/opsbox-core/src/: database.rs  error.rs  fs.rs  lib.rs  llm.rs  logging.rs  module.rs  odfi.rs  response.rs
backend/opsbox-core/src/agent/: client.rs  mod.rs  models.rs
backend/opsbox-core/src/common/: archive.rs  mod.rs
backend/opsbox-core/src/dfs/: archive.rs  archive_cache.rs  endpoint.rs  factory.rs  filesystem.rs  mod.rs  orl_parser.rs  path.rs  resource.rs  searchable.rs
backend/opsbox-core/src/fs/: entry_stream.rs  file_type.rs  list.rs  mod.rs
backend/opsbox-core/src/llm/: debug.rs  mod.rs
backend/opsbox-core/src/logging/: repository.rs  schema.rs
backend/opsbox-core/src/odfs/: fs.rs  manager.rs  mod.rs  orl.rs  types.rs
backend/opsbox-core/src/processing/: filter.rs  mod.rs  preload.rs  processor.rs  types.rs
backend/opsbox-core/src/repository/: s3.rs
backend/opsbox-core/tests/: dfs_integration_test.rs
backend/opsbox-domain/: Cargo.toml
backend/opsbox-domain/src/: lib.rs
backend/opsbox-resource/: Cargo.toml
backend/opsbox-resource/src/: connector_ext.rs  lib.rs
backend/opsbox-server/: Cargo.toml  HTTP_REQUEST_LOGGING.md
backend/opsbox-server/src/: config.rs  daemon.rs  daemon_windows.rs  lib.rs  log_routes.rs  logging.rs  main.rs  network.rs  server.rs
backend/opsbox-server/tests/: log_api_integration.rs
backend/resource-explorer/: Cargo.toml
backend/resource-explorer/src/: api.rs  domain.rs  lib.rs  service.rs
backend/test-common/: Cargo.toml
backend/test-common/src/: agent_mock.rs  archive_utils.rs  database.rs  file_utils.rs  lib.rs  llm_mock.rs  orl_utils.rs  performance.rs  s3_mock.rs  search_utils.rs  security.rs  test_monitoring.rs
server/api-gateway/: Cargo.toml
server/api-gateway/src/: config.rs  daemon.rs  logging.rs  main.rs  server.rs
server/logsearch/: Cargo.toml
server/logsearch/src/: bbip_service.rs  lib.rs  nl2q.rs  routes.rs  search.rs  settings.rs  simple_cache.rs  storage.rs  tuning.rs
server/logseek/: Cargo.toml
server/logseek/src/: lib.rs  nl2q.rs  routes.rs  routes.rs.backup  routes_agent.rs  search.rs  settings.rs  simple_cache.rs  storage.rs
(+607 files in other folders)
