[workspace]
resolver = "3"
members = [
  "opsbox-server",
  "opsbox-core",
  "logseek",
  "agent",
  "agent-manager", "explorer",
  "test-common",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["wangyue"]

[workspace.dependencies]
# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "time"] }
tracing-appender = "0.2"
