[package]
name = "agent-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# OpsBox 核心
opsbox-core = { path = "../opsbox-core" }

# Web 框架
axum = "0.8"
tower-http = { version = "0.6" }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }

# 日志
log = "0.4"

# 工具库
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Trait 支持
async-trait = "0.1"

# 模块注册
inventory = "0.3"

# 全局状态管理
once_cell = "1.20"

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

[dev-dependencies]
tokio-test = "0.4"
tower = "0.5"
tempfile = "3.0"
