[package]
name = "opsbox-agent"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "OpsBox agent binary"

[[bin]]
name = "opsbox-agent"
path = "src/main.rs"

[dependencies]
# 复用 logseek 的搜索逻辑和存储抽象
logseek = { path = "../logseek" }

# Web 框架
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
log = "0.4"
env_logger = "0.11"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }

# 工具
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "2"
anyhow = "1"
clap = { version = "4.0", features = ["derive"] }

# 路径匹配
globset = "0.4"

# 守护进程支持
daemonize = "0.5"
nix = { version = "0.28", features = ["signal", "process"] }

# 系统信息
hostname = "0.4"
num_cpus = "1.0"

# 异步流
futures = "0.3"
async-stream = "0.3"

[target.'cfg(windows)'.dependencies]
# Windows 服务支持
windows-service = "0.5"

[package.metadata.generate-rpm]
assets = [
  # 将已构建的二进制安装到 /usr/bin；把“你的二进制名”替换为实际二进制名
  { source = "../target/x86_64-unknown-linux-musl/release/opsbox-agent", dest = "/usr/bin/opsbox-agent", mode = "0755" }
]