[package]
name = "opsbox-agent"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "OpsBox agent binary"

[lib]
name = "opsbox_agent"
path = "src/lib.rs"

[[bin]]
name = "opsbox-agent"
path = "src/main.rs"

[dependencies]
# 复用 logseek 的搜索逻辑和存储抽象
logseek = { path = "../logseek" }
# 复用 explorer 的资源浏览逻辑（不包含 agent-manager feature）
explorer = { path = "../explorer", default-features = false }
opsbox-core = { path = "../opsbox-core" }

# Web 框架
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# HTTP 客户端
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# 工具
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "2"
anyhow = "1"
clap = { version = "4.0", features = ["derive"] }
urlencoding = "2"

# 路径匹配
mime_guess = "2.0.5"

# 守护进程支持（仅 Unix）
[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
nix = { version = "0.28", features = ["signal", "process"] }

# 系统信息（仅非 Windows 平台）
[target.'cfg(not(windows))'.dependencies]
hostname = "0.4"
num_cpus = "1.0"

# 异步流
futures = "0.3"
async-stream = "0.3"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
futures = "0.3"

[target.'cfg(windows)'.dependencies]
# Windows 服务支持
windows-service = "0.8"

[package.metadata.generate-rpm]
assets = [
  # 将已构建的二进制安装到 /usr/bin；把"你的二进制名"替换为实际二进制名
  { source = "../target/x86_64-unknown-linux-musl/release/opsbox-agent", dest = "/usr/bin/opsbox-agent", mode = "0755" }
]
