[package]
name = "explorer"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
opsbox-core = { path = "../opsbox-core" }
agent-manager = { path = "../agent-manager" }

# Web Framework
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing
tracing = { workspace = true }

# Error Handling
thiserror = "2"

# Utilities
urlencoding = "2"
inventory = "0.3"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"
percent-encoding = "2.3.2"

[dev-dependencies]
tar = "0.4"
tempfile = "3"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
flate2 = "1.0"

