[package]
name = "explorer"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[features]
default = ["agent-manager"]
agent-manager = ["dep:agent-manager"]

[dependencies]
opsbox-core = { path = "../opsbox-core" }
agent-manager = { path = "../agent-manager", optional = true }

# Web Framework
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing
tracing = { workspace = true }

# Error Handling
thiserror = "2"

# Utilities
urlencoding = "2"
inventory = "0.3"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"
async_zip = { version = "0.0.18", features = ["tokio", "deflate"] }
percent-encoding = "2.3.2"
tempfile = "3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
opsbox-test-common = { path = "../test-common" }
tar = "0.4"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
flate2 = "1.0"
