[package]
name = "logsearch"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8.4"
bytes = "1.10.1"
flate2 = "1.1.2"
minio = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
tar = "0.4.44"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

