[package]
name = "logsearch"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8.4"
bytes = "1.10.1"
flate2 = "1.1.2"
futures = "0.3"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
async-trait = "0.1"
minio = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
tar = "0.4.44"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io", "io-util"] }
thiserror = "1"

