[package]
name = "opsbox-core"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Module registry
inventory = "0.3"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

# Error handling
thiserror = "2"
problemdetails = { version = "0.6", features = ["axum"] }

# Logging
log = "0.4"

# HTTP types
http = "1.0"

# HTTP 客户端（用于大模型调用）
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Stream/trait 支持
futures = "0.3"
