[package]
name = "opsbox-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Module registry
inventory = "0.3"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

# Error handling
thiserror = "2"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# HTTP types
http = "1.0"

# HTTP 客户端（用于大模型调用）
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Stream/trait 支持
futures = "0.3"
url = "2.5"
percent-encoding = "2.3"

# File System & Compression
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
flate2 = "1.0"
jwalk = "0.8"
async-tar = "0.5"
tokio-util = { version = "0.7", features = ["compat", "io"] }
uuid = { version = "1.0", features = ["v4"] }

# AWS SDK for S3
aws-sdk-s3 = { version = "1.15", features = ["behavior-version-latest"] }
infer = "0.19"
regex = "1"
once_cell = "1.20"
async_zip = { version = "0.0.18", features = ["tokio", "deflate"] }
tokio-tar = "0.3.1"
tar = { version = "0.4", features = ["default"] }
tempfile = "3.24.0"
lru = "0.16.2"
futures-lite = "2.6.1"
tokio-stream = "0.1.17"
fluent-uri = "0.4.1"
num_cpus = "1.16"
globset = "0.4"

[dev-dependencies]
test-log = "0.2"
opsbox-test-common = { path = "../test-common" }
