[package]
name = "opsbox-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "opsbox-server"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
opsbox-core = { path = "../opsbox-core" }
# ✅ 模块化架构：使用 optional dependencies
logseek = { path = "../logseek", optional = true }
agent-manager = { path = "../agent-manager", optional = true }
# 未来可添加更多模块：
# analytics = { path = "../analytics", optional = true }
# monitoring = { path = "../monitoring", optional = true }
# 仍保留 CORS 中间件；不再使用文件系统静态服务
# （但 feature 保留不影响体积，后续可移除 fs feature）
tower-http = { version = "0.6", features = ["fs", "cors"] }
# 为跨平台交叉编译启用 OpenSSL 源码内置编译（避免目标系统缺失 OpenSSL 开发包）
openssl = { version = "0.10", features = ["vendored"] }
# 嵌入前端静态资源到二进制（无需任何特性）
rust-embed = { version = "8" }
mime_guess = "2"
# 命令行解析库（带派生宏）
clap = { version = "4", features = ["derive"] }
num_cpus = "1"
# 统一日志初始化与级别过滤
log = "0.4"
env_logger = "0.11"
# 仅使用 mimalloc 作为全局分配器（不再保留切换能力）
mimalloc = "0.1"


# ✅ 模块功能开关
[features]
# 默认启用所有模块
default = ["logseek", "agent-manager"]
# 可选：只启用特定模块
# minimal = []  # 最小化构建，无业务模块
# all = ["logseek", "agent-manager", "analytics", "monitoring"]  # 启用所有模块

[target.'cfg(unix)'.dependencies]
# 仅在类 Unix 系统上启用后台守护能力
daemonize = "0.5"
# 用于 stop 子命令向进程发送信号 (使用安全的nix库替代直接libc调用)
nix = { version = "0.30", features = ["signal"] }
