[package]
name = "opsbox-server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[[bin]]
name = "opsbox-server"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
opsbox-core = { path = "../opsbox-core" }
# ✅ 模块化架构：使用 optional dependencies
# 为 logseek 启用 mimalloc-collect 特性，以便在缓存清理后尝试收缩 mimalloc 堆
logseek = { path = "../logseek", optional = true, features = ["mimalloc-collect"] }
agent-manager = { path = "../agent-manager", optional = true }
explorer = { path = "../explorer", optional = true }
# 未来可添加更多模块：
# analytics = { path = "../analytics", optional = true }
# monitoring = { path = "../monitoring", optional = true }
# 不再使用文件系统静态服务
tower-http = { version = "0.6", features = ["fs"] }
# 为跨平台交叉编译启用 OpenSSL 源码内置编译（避免目标系统缺失 OpenSSL 开发包）
openssl = { version = "0.10", features = ["vendored"] }
# 嵌入前端静态资源到二进制（无需任何特性）
rust-embed = { version = "8" }
mime_guess = "2"
# 命令行解析库（带派生宏）
clap = { version = "4", features = ["derive"] }
num_cpus = "1"
# 统一日志初始化与级别过滤
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
# 仅使用 mimalloc 作为全局分配器（不再保留切换能力）
mimalloc = "0.1"


# ✅ 模块功能开关
[features]
# 默认启用所有模块
default = ["logseek", "agent-manager", "explorer"]
# 可选：只启用特定模块
# minimal = []  # 最小化构建，无业务模块
# all = ["logseek", "agent-manager", "analytics", "monitoring"]  # 启用所有模块

[target.'cfg(unix)'.dependencies]
# 仅在类 Unix 系统上启用后台守护能力
daemonize = "0.5"
# 用于 stop 子命令向进程发送信号 (使用安全的nix库替代直接libc调用)
nix = { version = "0.30", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
# Windows 服务支持
windows-service = "0.8"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
serde_json = "1.0"
futures = "0.3"
