[package]
name = "logsearch"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["json"] }
bytes = "1.10.1"
flate2 = "1.1.2"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
async-trait = "0.1"
minio = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.44"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io", "io-util", "compat"] }
thiserror = "2"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
async-tar = "0.5"
problemdetails = { version = "0.6", features = ["axum"] }
regex = "1"
fancy-regex = "0.11"
globset = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# 中文注释：为跨平台交叉编译启用 OpenSSL 源码内置编译（避免目标系统缺失 OpenSSL 开发包）
openssl = { version = "0.10", features = ["vendored"] }
# 中文注释：为确保各平台无需系统级 sqlite3，开启 sqlx 的 sqlite 并显式依赖打包版 libsqlite3-sys。
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
# 中文注释：Ollama Rust 客户端
ollama-rs = "0.3"
